# pyoccur

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
pyoccur/: pyoccur.py
tests/: test_pyoccur.py
