[tool.poetry]
name = "pyoccur"
version = "0.1.0"
description = "Operations with duplicates in python lists"
authors = ["amrs-tech <amrs.tech@gmail.com>"]
repository = "https://github.com/amrs-tech/pyoccur/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
